fix(footer):Corrigindo gap Payment no mobile

--- a/src/arquivos/sass/partials/_footer.scss
+++ b/src/arquivos/sass/partials/_footer.scss
@@ -100,6 +100,7 @@
 
 		@include mq(md, max) {
 			border-bottom: 1px solid $grey;
+			gap: 0;
 		}
 	}
 
